0.1-alpha3/_sources/gene/AGAP013353.rst.txt
:orphan:



AGAP013353
==========

Location: **2R:24,876,664-24,877,349**





External links:
`VectorBase <https://www.vectorbase.org/Anopheles_gambiae/Gene/Summary?g=AGAP013353>`_ |
`Ag1000G genome browser <https://www.malariagen.net/apps/ag1000g/phase1-AR3/index.html?genome_region=2R:24876664-24877349#genomebrowser>`_





Overlapping selection signals
-----------------------------

The following signals have a focus which overlaps this gene.

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/XPEHH/BFM.BFS/2/2/index`
      - XPEHH
      - Burkina Faso *An. coluzzii*
      - 2R:24,820,000-24,900,000
      - 360
      - 99.8%
      - nan
    * - :doc:`../signal/H12/BFM/2/5/index`
      - H12
      - Burkina Faso *An. coluzzii*
      - 2R:24,860,000-24,900,000
      - 267
      - 98.5%
      - nan
    * - :doc:`../signal/XPEHH/BFM.AOM/2/1/index`
      - XPEHH
      - Burkina Faso *An. coluzzii*
      - 2R:24,840,000-24,880,000
      - 109
      - 99.3%
      - nan
    






Comments
--------


.. raw:: html

    <div id="disqus_thread"></div>
    <script>
    
    var disqus_config = function () {
        this.page.identifier = '/gene/AGAP013353';
    };
    
    (function() { // DON'T EDIT BELOW THIS LINE
    var d = document, s = d.createElement('script');
    s.src = 'https://agam-selection-atlas.disqus.com/embed.js';
    s.setAttribute('data-timestamp', +new Date());
    (d.head || d.body).appendChild(s);
    })();
    </script>
    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments.</a></noscript>


